--- a/src/main/resources/templates/jokecreate.html
+++ b/src/main/resources/templates/jokecreate.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Carparks Creation</title>
+    <title>Jokes Creation</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
@@ -11,8 +11,26 @@
   <body>
     <div class = "container">
         <br>
-        <h3>Create carpark</h3>
+        <h3>Create Joke</h3>
         <br>
+
+        <form method="POST" th:action="@{/jokes/create}" th:object="${joke}">
+
+          <label>Type:</label>
+          <input type="text" th:field="*{type}" />
+
+          <label>Setup:</label>
+          <input type="text" th:field="*{setup}" />
+
+          <label>Punchline:</label>
+          <input type="text" th:field="*{punchline}" />
+
+          <label>ID:</label>
+          <input type="number" th:field="*{id}" />
+
+          <button type="submit">Add Joke</button>
+      </form>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
