--- a/src/main/resources/templates/jokelist.html
+++ b/src/main/resources/templates/jokelist.html
@@ -14,7 +14,7 @@
         <h3>Joke List</h3>
         <br>
 
-        <table>
+        <table class="table table-striped">
             <thead>
                 <tr>
                     <th>ID</th>
